# spo2

./: Cargo.toml  LICENSE  README.md
spo2/: Cargo.toml  README.md
spo2_core/: Cargo.toml  README.md
spo2_core/src/: ffi_struct.rs  lib.rs
spo2_derive/: Cargo.toml  README.md
spo2_derive/src/: lib.rs
spo2_derive/tests/: ffi_struct_tests.rs  pass.rs
spo2_derive/tests/ffi_struct/: fail.rs  fail.stderr  mod.rs  pass.rs
spo2_tests/: Cargo.toml
spo2_tests/src/: lib.rs
