[package]
name = "spo2_derive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
proc-macro = true

[dependencies]
proc-macro2 = "1"
quote = "1"
spo2_core = { path = "../spo2_core" }
syn = { version = "2", features = ["full"] }

[dev-dependencies]
trybuild = "1"
